--- a/Source/MVVM_UI/SoAEditor/Views/ShellView.xaml
+++ b/Source/MVVM_UI/SoAEditor/Views/ShellView.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:SoAEditor.Views"
         xmlns:VM="clr-namespace:SoAEditor.ViewModels"
         mc:Ignorable="d" 
-        Title="Scope of Accreditation editor" Height="650" Width="1000" MinHeight="400" MinWidth="600" Icon="Icon.ico" WindowStartupLocation="CenterScreen">
+        Title="Scope of Accreditation editor" Height="650" Width="1000" MinHeight="400" MinWidth="600" Icon="SoA.png" WindowStartupLocation="CenterScreen">
 
     <Window.Resources>
 
